bin/testsuite/tests/compiler/src/compiler1465.swg
#global testerror "Err0683"
var #alias45AA = 0 // swc-expected-error {{parser_err_invalid_compiler}}